# polygen

./: .env.example  .eslintrc.js  .gitignore  .prettierignore  Cargo.toml  README.md  biome.json  bun.lockb  env.d.ts  index.html  package-lock.json  package.json  pnpm-lock.yaml  remix.config.js  rustfmt.toml  server.ts  tailwind.config.js  tsconfig.json  vite.config.ts  vitest.config.ts  wrangler.toml
.github/: dependabot.yml
.github/workflows/: bench.yml  build.yml  clippy.yml  deploy.yml  format.yml  lint.yaml  lint.yml  rust.yml  test.yml  typecheck.yml
.zed/: settings.json
app/: access.ts  constants.server.ts  db.server.ts  entry.client.tsx  entry.server.tsx  env.server.ts  hash.server.ts  i18n.ts  i18next.d.ts  i18next.server.ts  reponses.server.ts  root.tsx  session.server.ts  singleton.server.ts  theme.ts  utils.server.ts  utils.test.ts  utils.ts  validator.server.ts
app/components/: adminMenu.tsx  animatedModal.tsx  announcement.tsx  authBox.tsx  comment.tsx  community.tsx  countdown.tsx  footer.tsx  gameMessage.tsx  hljs.d.ts  katex.d.ts  layout.tsx  post.tsx  quote.tsx  recentComments.tsx  renderedText.tsx  vditorSkeleton.tsx
app/components/apps/: catchTheCat.tsx  wasmTest.tsx
app/components/community/: addAnnouncement.tsx  addComment.tsx  addPost.tsx  announcement.tsx  announcements.tsx  comment.tsx  comments.tsx  copyLink.tsx  countdowns.tsx  editor.tsx  loadMore.tsx  post.tsx  posts.tsx  privateIndicator.tsx  recentComments.tsx  remarkMention.ts  renderedText.tsx  textRenderer.tsx  userAvatar.tsx  userLink.tsx  userTag.tsx  utils.ts
app/components/game/: gamePanel.tsx  ping.tsx  ranks.tsx  roomList.tsx
app/components/layout/: auth.tsx  backToTop.tsx  colorModeToggle.tsx  doveSelect.tsx  (+11 more)
app/core/: types.d.ts
app/hooks/: cookie.ts  datetime.ts  loader.ts  revalidator.ts  state.ts  transition.ts
app/i18n/: en.ts  i18n.ts  i18next.d.ts  i18next.server.ts  zh.ts
app/models/: announcement.server.ts  comment.server.ts  common.ts  cuid.server.ts  post.server.ts  score.server.ts  star.server.ts  user.server.ts
app/routes/: _index.tsx  admin._index.tsx  admin.announcement.tsx  admin.tsx  api.announcement.delete.tsx  api.announcement.edit.tsx  api.comment.delete.tsx  api.post.comment.ts  api.post.comment.tsx  api.post.delete.ts  api.post.delete.tsx  api.post.edit.ts  api.post.edit.tsx  api.post.page.ts  api.post.page.tsx  api.post.user.ts  api.post.user.tsx  auth.login.ts  auth.login.tsx  auth.logout.tsx  auth.register.ts  auth.register.tsx  captcha.ts  captcha.tsx  catch-the-cat.tsx  comment.delete.tsx  events.deleteScore.tsx  game.$rid.tsx  game._index.tsx  game.tsx  index.tsx  join.tsx  leaderboard.tsx  login.tsx  logout.tsx  map.tsx  post.$cuid.tsx  post.$id.tsx  post.$postId.tsx  post.comment.tsx  (+19 more)
app/styles/: game.css  global.css  tailwind.css
app/theme/: code.ts  global.less  global.ts  input.ts  link.ts  menu.ts  modal.ts  nprogress.css  nprogress.less  theme.ts
app/utils/: cuid.ts  hash.ts  merge.test.ts
app/validators/: auth.server.ts  community.server.ts  game.server.ts  session.server.ts  utils.server.ts
app/wasm/: client.ts  fibonacci.ts  server.ts  utils.ts
articles/: 周年庆活动公告.md  囚禁竞速挑战赛.md  域名更换公告.md  欢迎来到 polygen.md  波特房考试规则.md  活动排名与奖励发放.md  第 35 次内测已开始.md  第 36 次内测已开始.md  第 37 次内测已开始.md  第 38 次内测已开始.md
articles/en/: Insider Preview #39 Has Started.md  Insider Preview #40 Has Started.md  Insider Preview #41 Has Started.md  Insider Preview #42 Has Started.md  Insider Preview #43 Has Started.md  Insider Preview #45 Has Started.md  Welcome to polygen.md
articles/zh/: 元旦活动公告.md  元旦活动奖励发放.md  春节活动公告.md  欢迎来到 polygen.md  第 39 次内测已开始.md  第 40 次内测已开始.md  第 41 次内测已开始.md  第 42 次内测已开始.md  第 43 次内测已开始.md  第 45 次内测已开始.md  第 46 次内测已开始.md
benches/: cuid.ts  hash.ts  map.ts
benchmarks/: hash.ts  index.ts
crates/algorithm/: Cargo.toml
crates/generator/: Cargo.toml
crates/generator/src/: lib.rs
crates/generator/src/builder/: basic.rs  mod.rs
crates/generator/src/designer/: mod.rs  pure_random.rs  random.rs
crates/generator/src/extractor/: basic.rs  mod.rs
crates/generator/src/transformer/: basic.rs  mod.rs
crates/gm/: Cargo.toml
crates/gm/src/: land.rs  lib.rs
crates/gm/src/generator/: mod.rs  pure_random.rs
crates/model/: Cargo.toml
crates/models/: Cargo.toml
crates/playground/: Cargo.toml
crates/server/: Cargo.toml
crates/server/src/: main.rs
crates/server/src/game/: mod.rs
crates/server/src/game/room/: mod.rs  player.rs
crates/wasm/: Cargo.toml
crates/wasm/src/: land.rs  lib.rs
crates/wasm/src/generator/: mod.rs  pure_random.rs
crates/wasm/src/gm/: edges.rs  face.rs  index.rs  mod.rs
fibonacci/: Cargo.toml
fibonacci/src/: lib.rs
legacy/: .env  .eslintrc.cjs  README.md  package.json  tsconfig.json
legacy/app/: access.ts  entry.server.tsx  root.tsx  session.server.ts  utils.ts
legacy/static/: catchTheCat.min.js
patches/: fireworks-js+2.10.7.patch
prisma/: schema.prisma  seed.ts
public/js/: catch-the-cat.min.js  phaser.min.js
server/: index.js  index.ts
src/: index.less  index.ts  map-viewer.ts
src/game/: gm.ts  palette.ts
static/: Noto Sans SC Thin_Regular.json  phaser.min.js
static/locales/: en.json  zh.json
static/public/: manifest.json
static/texture/: texture.json
wasm/: .gitignore  Cargo.toml  rustfmt.toml
wasm/.cargo/: config.toml
wasm/src/: hash.rs  init.rs  land.rs  lib.rs  map.rs  map_index.rs  map_patch.rs  map_testing.rs  map_utils.rs  map_view.rs  pos.rs
(+216 files in other folders)
