[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
edition = "2024"
license = "Unlicense"
repository = "https://github.com/Resonaa/polygen"
homepage = "https://161.moe"

[workspace.dependencies]
bitfield-struct = "0.11.0"
glam = "0.30.4"
rand = "0.9.1"
wasm-bindgen = "0.2.100"
getrandom = { version = "0.3.3", features = ["wasm_js"] }
rand_chacha = "0.9.0"

[profile.release]
lto = true
panic = "abort"
codegen-units = 1
