[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
edition = "2024"
license = "Unlicense"
repository = "https://github.com/Resonaa/polygen"
homepage = "https://161.moe"

[workspace.dependencies]
anyhow = "1.0.98"
axum = "0.8.4"
bitfield-struct = "0.11.0"
dashmap = "6.1.0"
glam = "0.30.4"
rand = "0.9.1"
wasm-bindgen = "0.2.100"
getrandom = { version = "0.3.3", features = ["wasm_js"] }
rand_chacha = "0.9.0"
rmpv = "1.3.0"
serde = { version = "1.0.219", features = ["derive"] }
serde-querystring = "0.3.0"
socketioxide = { version = "0.17.2", features = [
  "state",
  "tracing",
  "msgpack",
] }
thiserror = "2.0.12"
tokio = { version = "1.45.1", features = [
  "rt-multi-thread",
  "net",
  "macros",
  "signal",
] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
log = "0.4.27"

[profile.release]
lto = true
panic = "abort"
codegen-units = 1
