[package]
name = "wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[features]
client = ["dep:wee_alloc"]

[dependencies]
wasm-bindgen = "0.2"
console_log = "1"
log = "0.4"
wee_alloc = { version = "0.4", optional = true }
cfg-if = "1"

[profile.release]
lto = true
panic = "abort"
codegen-units = 1
opt-level = "z"

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O2"]
