[package]
name = "wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_log"]
client = ["lol_alloc"]

[dependencies]
wasm-bindgen = "0.2"
console_log = { version = "1", optional = true }
log = "0.4"
lol_alloc = { version = "0.4", optional = true }
cfg-if = "1"

[profile.release]
lto = true
panic = "abort"
codegen-units = 1
opt-level = "z"

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Os"]
