[package]
name = "wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_log", "highway"]
client = ["lol_alloc"]

[dependencies]
wasm-bindgen = "0"
console_log = { version = "1", optional = true }
log = "0"
lol_alloc = { version = "0", optional = true }
highway = { version = "1", optional = true }
bitvec = "1"

[profile.release]
lto = true
panic = "abort"
codegen-units = 1
opt-level = "z"

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Os"]
