[package]
name = "server"
version = "0.1.0"
readme = "../../README.md"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
model = { path = "../model" }
generator = { path = "../generator" }
tokio.workspace = true
axum.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
socketioxide.workspace = true
rmpv.workspace = true
serde.workspace = true
serde-querystring.workspace = true
dashmap.workspace = true
