[package]
name = "wasm"
version = "0.1.0"
readme = "../../README.md"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Os"]

[dependencies]
bitfield-struct.workspace = true
glam.workspace = true
rand.workspace = true
wasm-bindgen.workspace = true
getrandom.workspace = true
rand_chacha.workspace = true
model = { path = "../model" }
generator = { path = "../generator" }
